--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ license = "MIT"
 authors = ["Gleb Pomykalov <glebpom@gmail.com>"]
 
 [dependencies]
-octocrab = "0.44.0"
+anyhow = "1.0"
+octocrab = "0.44.1"
 tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
 reqwest = { version = "0.12.15", features = ["trust-dns", "rustls-tls"] }
 semver = "1"
